Fix some warnings.