@@ -12,7 +12,7 @@
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
-        <javafx.version>25-ea+5</javafx.version> </properties>
+        <javafx.version>25.0.2</javafx.version> </properties>
 
     <dependencies>
         <dependency>
@@ -50,7 +50,13 @@
 							<vmArgs>
 								<vmArg>--enable-native-access=javafx.graphics</vmArg>	
 								<vmArg>--enable-native-access=javafx.web</vmArg>
+								<vmArg>--enable-native-access=javafx.media</vmArg>
 							</vmArgs>
+							<finishArgs>
+								<finishArg>--socket=x11</finishArg>
+								<finishArg>--device=dri</finishArg>
+								<finishArg>--share=network</finishArg>
+							</finishArgs>
                         </configuration>
                     </execution>
                     <execution>
